# uACPI

./: LICENSE  README.md  meson.build  meson.options
.github/workflows/: main.yml
include/uacpi/: acpi.h  context.h  helpers.h  io.h  kernel_api.h  namespace.h  osi.h  registers.h  resources.h  sleep.h  tables.h  types.h  uacpi.h  utilities.h
include/uacpi/internal/: context.h  helpers.h  io.h  log.h  opcodes.h  opregion.h  registers.h  resources.h  stdlib.h  tables.h  types.h
include/uacpi/platform/: atomic.h  compiler.h  config.h  types.h
rdos/: acpi.tgt  acpi.wpj
source/: default_handlers.c  event.c  interpreter.c  io.c  mutex.c  namespace.c  notify.c  opcodes.c  opregion.c  osi.c  registers.c  resources.c  shareable.c  sleep.c  stdlib.c  tables.c  types.c  uacpi.c  utilities.c
tests/: run_tests.py
tests/runner/: CMakeLists.txt  api_tests.c  api_tests.cpp  argparser.h  barebones_runner.c  barebones_runner.cpp  helpers.c  helpers.cpp  helpers.h  interface_impl.c  interface_impl.cpp  os.h  resource_tests.c  resource_tests.cpp  test_runner.c  test_runner.cpp
tests/test-cases/: bogus-pci.asl
